<resources>
    <string name="app_name">ShopCar</string>
    <string name="make">Make:</string>
    <string name="model">Model:</string>
    <string name="price">Price:</string>
    <string name="product_id">PRODUCT_ID</string>
    <string name="not_applicable">NA</string>
    <string name="contentdesc">contentDesc</string>
    <string name="currency_unit">£</string>
    <string name="title_activity_vehicle">VehicleActivity</string>
    <string name="action_settings">Settings</string>
    <string name="registration_year">Reg Year</string>
    <string name="fuel_type">Fuel Type</string>
    <string name="mileage">Mileage</string>
    <string name="general_specs">General Specs</string>
    <string name="car_summary">Car Summary</string>
    <string name="verified_features">Verified Features</string>
    <string name="consumption">Consumption</string>
    <string name="interior">Interior</string>
    <string name="car_features">Car Features</string>
    <string name="car_specs">Car specs</string>
    <string name="running_cost">Running cost</string>
    <string name="service_history">Service History</string>
    <string name="date">Date</string>
    <string name="vehicle_tax">Vehicle tax</string>
    <string name="miles">" miles"</string>
    <string name="reg">"  reg"</string>
</resources>