<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ProgressBar
        android:id="@+id/pbDetails"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        android:layout_gravity="center" />

    <ImageView
        android:id="@+id/ivRefreshDetails"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:clickable="true"
        android:contentDescription="@string/not_applicable"
        android:focusable="true"
        android:padding="4dp"
        android:src="@drawable/ic_baseline_refresh_86"
        android:visibility="invisible" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <FrameLayout
                android:id="@+id/frameLayout"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.viewpager2.widget.ViewPager2
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:id="@+id/carImageSlider">

                </androidx.viewpager2.widget.ViewPager2>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:id="@+id/llDot"
                    android:visibility="gone"
                    android:layout_gravity="bottom"
                    android:background="@color/transparent_70"
                    android:orientation="horizontal"/>

            </FrameLayout>

            <LinearLayout
                android:id="@+id/llContainer"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin = "@dimen/space"
                android:orientation="vertical"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@+id/frameLayout"
                tools:layout_editor_absoluteX="0dp">

                <TextView
                    android:id="@+id/tvMakeName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:gravity="center"
                    android:background="@drawable/round_box"
                    android:textColor="@color/orange"
                    android:textStyle="bold"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:textSize="@dimen/head_title"/>

                <TextView
                    android:id="@+id/tvDisplayVarient"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textSize="@dimen/title"
                    />

                <LinearLayout
                    android:id="@+id/llPrice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="1"
                    android:layout_margin="@dimen/space"
                    android:visibility="gone"
                    android:background="@drawable/round_box"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvPrice"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_weight=".5"
                        android:textColor="@color/dark_red"
                        android:textSize="@dimen/title"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tvPCP"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight=".5"
                        android:layout_margin="5dp"
                        android:textStyle="bold"
                        android:textSize="@dimen/title" />

                </LinearLayout>


                <LinearLayout
                    android:id="@+id/llKeyFeatures"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/space"
                    android:visibility="gone"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:gravity="start"
                        android:text="@string/general_specs"
                        android:textColor="@color/dark_red"
                        android:textSize="@dimen/title"
                        android:textStyle="bold" />

                </LinearLayout>
                <LinearLayout
                    android:id="@+id/llCarSummary"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/space"
                    android:padding="@dimen/space"
                    android:visibility="gone"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:gravity="start"
                        android:text="@string/car_summary"
                        android:textColor="@color/dark_red"
                        android:textSize="@dimen/title"
                        android:textStyle="bold" />
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/llVerifiedFeature"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/space"
                    android:padding="@dimen/space"
                    android:visibility="gone"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:gravity="start"
                        android:text="@string/car_features"
                        android:textColor="@color/dark_red"
                        android:textSize="@dimen/title"
                        android:textStyle="bold" />
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/llCarSpecs"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/space"
                    android:padding="@dimen/space"
                    android:visibility="gone"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:gravity="start"
                        android:text="@string/car_specs"
                        android:textColor="@color/dark_red"
                        android:textSize="@dimen/title"
                        android:textStyle="bold" />
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/llRunningCost"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/space"
                    android:padding="@dimen/space"
                    android:visibility="gone"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:gravity="start"
                        android:text="@string/running_cost"
                        android:textColor="@color/dark_red"
                        android:textSize="@dimen/title"
                        android:textStyle="bold" />
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/llServiceHistory"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/space"
                    android:padding="@dimen/space"
                    android:visibility="gone"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:gravity="start"
                        android:text="@string/service_history"
                        android:textColor="@color/dark_red"
                        android:textSize="@dimen/title"
                        android:textStyle="bold" />
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/llConsumption"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/space"
                    android:padding="@dimen/space"
                    android:visibility="gone"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:gravity="start"
                        android:text="@string/consumption"
                        android:textColor="@color/dark_red"
                        android:textSize="@dimen/title"
                        android:textStyle="bold" />
                </LinearLayout>

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</FrameLayout>